--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -1,4 +1,5 @@
 @import './basic';
+@import './color';
 
 body {
   margin: 0;
@@ -53,11 +54,11 @@ a:focus {
 }
 
 a {
-  color: $main-color;
+  color: var(--main-color);
 }
 
 a:hover {
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 img {
@@ -101,7 +102,7 @@ input:invalid {
 
 ::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: $input-placeholder;
+  color: var(--input-placeholder);
   opacity: 1;
   /* Firefox adds a lower opacity to the placeholder,
     so use opacity: 1 to fix this. */
@@ -109,10 +110,10 @@ input:invalid {
 
 :-ms-input-placeholder {
   /* Internet Explorer 10-11 */
-  color: $input-placeholder;
+  color: var(--input-placeholder);
 }
 
 ::-ms-input-placeholder {
   /* Microsoft Edge */
-  color: $input-placeholder;
+  color: var(--input-placeholder);
 }
